--- a/06-making-a-map/1/styles.css
+++ b/06-making-a-map/1/styles.css
@@ -3,6 +3,7 @@
   src: url('./../../Inter.var.woff2');
 }
 
+
 body {
   display: flex;
   flex-direction: column;
@@ -26,7 +27,7 @@ body {
   stroke: #cadddd;
   fill: none;
 }
-/* 
+
 .my-location {
   fill: #8f97db;
   stroke: white;
@@ -102,4 +103,4 @@ circle {
 
 .legend-value:first-of-type {
   text-anchor: end;
-}  */
+}
